mobile view for last current progress

--- a/src/index.css
+++ b/src/index.css
@@ -50,3 +50,7 @@ body {
 input[type=number]::-webkit-inner-spin-button {
   -webkit-appearance: none;
 }
+
+.active {
+  border: 2px solid #fe590c;
+}
